
	* gnome-rr-config.c (gnome_rr_config_get_backup_filename): Implement.
	(gnome_rr_config_get_intended_filename): Implement.
	(get_config_filename): Replaced by gnome_rr_config_get_intended_filename().

	Create the backup file:

	* gnome-rr-config.c (gnome_rr_config_save): Create a backup file
	of monitors.xml when saving a new configuration.

2009-01-25  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: (get_config_filename): create the config dir if it
	doesn't already exist, thus allowing creation of the config file :-)

==================== 2.25.5 ====================

2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.h: Add TODO comment to clean up api.

2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.c (gnome_bg_set_pixmap_as_root_with_crossfade), (gnome_bg_get_pixmap_from_root): Add functions to let g-s-d crossfade bg.

2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Add docstring for gnome_bg_set_pixmap_as_root

2009-01-19  Ray Strode  <rstrode@redhat.com>

	Add Crossfade class

	* gnome-bg-crossfade.[ch]: New files
	to manage a cross fade animation (not used yet).

2009-01-19  Ray Strode  <rstrode@redhat.com>

	Move part of set_pixmap_as_root to set_root_pixmap_id

	* gnome-bg.c (set_pixmap_as_root),
	(set_root_pixmap_id): The meatiest part of
	set_pixmap_as_root takes the passed
	in pixmap and stores it on the root window in the
	ESETROOT_PMAP_ID and _XROOTPMAP_ID properties.  That
	functionality stands on its own, and should be factored
	out so it can get reused later when adding crossfade
	transitions on background changes.


2009-01-19  Ray Strode  <rstrode@redhat.com>

	* gnome-bg.c (gnome_bg_set_pixmap_as_root): Use gdk
	functions to grab server and flush client.

2009-01-19  Ray Strode  <rstrode@redhat.com>

	Emit "transitioned" not "changed" for new frames

	* gnome-bg.c (do_transitioned), (queue_transitioned),
	(gnome_bg_class_init), (on_timeout): When changing